--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 % !TEX builder = LATEXMK
 % !TEX program = xelatex
 \documentclass[master,oneside]{zjuthesis}
+\usepackage[]{algorithm2e}
 
 % 插图路径设置，图片放在figures 文件夹下。一般来说论文的插图比较多，通常按章节存
 % 放，因此可以在以下命令中在按章节添加存放图片的文件夹路径。如以下这个路径中 ./
@@ -93,6 +94,8 @@
 \mainmatter
 \include{data/chapter-1}
 %\include{data/intro}
+\include{data/chapter-1-1}
+\include{data/chapter-1-2}
 \include{data/chapter-2}
 \include{data/chapter-3}
 \include{data/chapter-4}
